--- a/창의공 과제.md
+++ b/창의공 과제.md
@@ -1,6 +1,6 @@
 2018920022 컴퓨터과학부 박지원
 
-Client   안드로이드
+Client 안드로이드
 1. 안드로이드란 ?
 
  안드로이드는 리눅스(Linux) 2.6 커널을 기반으로 강력한 운영체제(OS；operating system)와 포괄적 라이브러리 세트, 풍부한 멀티미디어 사용자 인터페이스, 폰 애플리케이션 등을 제공한다. 세계 각국의 이동통신 관련 회사 연합체인 '오픈 핸드셋 얼라이언스(OHA；Open Handset Alliance)'가 2007년 11월에 공개하였다. 실질적으로는 세계적 검색엔진 업체인 구글(Google)사가 작은 회사인 안드로이드사를 인수하여 개발하였으며, 따라서 '구글 안드로이드'라고도 한다. 안드로이드는 컴퓨터에서 소프트웨어와 하드웨어를 제어하는 운영체제인 '윈도'에 비유할 수 있는데, 휴대폰에 안드로이드를 탑재하여 인터넷과 메신저 등을 이용할 수 있으며, 휴대폰뿐 아니라 다양한 정보 가전 기기에 적용할 수 있는 연동성도 갖추고 있다. 안드로이드 소프트웨어 개발자 키트에는 고급 개발 및 디버깅 툴, 풍부한 라이브러리, 트루 디바이스 에뮬레이터, 심층적인 문서화 자료, 샘플 프로젝트, 튜토리얼, FAQ 등이 포함되어 있다. 또 개발자 키트를 제공하는 사이트는 블로그 및 토론 그룹의 기능이 포함되어 있어 누구든 플랫폼에 대한 지식과 의견을 공유할 수 있다.
@@ -21,13 +21,17 @@ Client   안드로이드
   안드로이드폰의 가장 큰 장점이라면 바로 ‘개방성’과 ‘다양성’이다. 모든 제조사는 마음만 먹으면 자유롭게 안드로이드폰을 생산할 수 있고, 소비자들은 여러 제조사의 안드로이드폰 중에 자신의 취향에 맞는 것을 선택할 수 있다. 안드로이드폰이 점유율을 급격하게 높일 수 있던 것도 이에 힘입은 바가 크다.
   
  + 모토로이 
-  모토로이(MOTO ROI)는 모토로라 모빌리티에서 제조, 판매하는 안드로이드 스마트폰으로 한국에 처음 선보인 안드로이드 폰이다. 출시당시 안드로이드 2.0 이클레어를 탑재하였다. 본 제품은 원래 모토로라 드로이드1(모토쿼티)이었다. 하지만 모토로라 코리아는 대한민국 사용자환경에 맞춰 변형하여 출시하였다. 대한민국에만 출시된 모토로라의 현지화 모델이다
-  모토쿼티와 기본적으로 동일한 사양이며, 쿼티 키패드가 없고 대신 지상파 DMB 수신 및 FM 라디오 수신 기능이 두 가지가 모두 적용되어 있다는 점만 다르다.
+ 
+  모토로이(MOTO ROI)는 모토로라 모빌리티에서 제조, 판매하는 안드로이드 스마트폰으로 한국에 처음 선보인 안드로이드 폰이다. 출시당시 안드로이드 2.0 이클레어를 탑재하였다. 본 제품은 원래 모토로라 드로이드1(모토쿼티)이었다. 하지만 모토로라 코리아는 대한민국 사용자환경에 맞춰 변형하여 출시하였다. 대한민국에만 출시된 모토로라의 현지화 모델이다. 모토쿼티와 기본적으로 동일한 사양이며, 쿼티 키패드가 없고 대신 지상파 DMB 수신 및 FM 라디오 수신 기능이 두 가지가 모두 적용되어 있다는 점만 다르다.
+  
   관련된 논란 : 2010년 초 모토로이를 구입한 대한민국의 한 대학생이 인터넷 사용 중 발열 현상으로 손가락에 1도 화상을 입는 사건이 발생하여 결국 법정 분쟁으로 비화되었다. 이에 더하여 2010년 7월에는 모토로라가 제품 소개 화면에서 내장 메모리의 용량과 관련된 내용을 누락, 플래시를 지원하지 않음에도 지원함으로 표시한 것이 고소로 이어졌다.
 
 4. 안드로이드의 공식 언어
+
  1) 코클린
+ 
   ‘코틀린‘은 젯브레인이 2011년 만든 언어다. 자바가상머신(JVM) 언어라 자바와 호환되고 안드로이드 개발에 주로 활용된다. 현재 0.12버전까지 나왔다. 코틀린은 안드로이드 개발자로 유명한 제이크 왓슨이 알리면서 유명세를 탔다. 
+  
   특징 
  ? 코틀린은 문법 자체가 간결하다. 코드 길이가 짧은 게 무조건 좋다고 단정할 수는 없는 부분이지만, 코드가 간결해지면 유지보수를 조금 더 편하게 할 수 있다. 또한 자바는 보통 정해진 원칙을 엄격하게 따르면서 쓰는데, 코틀린은 좀 더 다양하게 표현을 확장할  수 있다. 김상우 개발자는 “코틀린으로 작성해 기존 자바 코드보다 절반에서 최대 4분의 1로 코드를 줄인 적도 있다”라고 설명했다.
  ? 코틀린은 컴파일 속도가 빠른 편이고, 런타임 사이즈가 작아서 안드로이드에 넣기에도 부담이 적다. 또 자바에선 NULL값 관련한 오류가 자주 발생하는데, 코틀린에선 NULL값을 코드에서 없애는 것을 지향한다. 결과적으로 프로그램의 안정성을 높일 수 있다.
