--- a/창의공 과제.md
+++ b/창의공 과제.md
@@ -6,6 +6,7 @@ Client 안드로이드
  안드로이드는 리눅스(Linux) 2.6 커널을 기반으로 강력한 운영체제(OS；operating system)와 포괄적 라이브러리 세트, 풍부한 멀티미디어 사용자 인터페이스, 폰 애플리케이션 등을 제공한다. 세계 각국의 이동통신 관련 회사 연합체인 '오픈 핸드셋 얼라이언스(OHA；Open Handset Alliance)'가 2007년 11월에 공개하였다. 실질적으로는 세계적 검색엔진 업체인 구글(Google)사가 작은 회사인 안드로이드사를 인수하여 개발하였으며, 따라서 '구글 안드로이드'라고도 한다. 안드로이드는 컴퓨터에서 소프트웨어와 하드웨어를 제어하는 운영체제인 '윈도'에 비유할 수 있는데, 휴대폰에 안드로이드를 탑재하여 인터넷과 메신저 등을 이용할 수 있으며, 휴대폰뿐 아니라 다양한 정보 가전 기기에 적용할 수 있는 연동성도 갖추고 있다. 안드로이드 소프트웨어 개발자 키트에는 고급 개발 및 디버깅 툴, 풍부한 라이브러리, 트루 디바이스 에뮬레이터, 심층적인 문서화 자료, 샘플 프로젝트, 튜토리얼, FAQ 등이 포함되어 있다. 또 개발자 키트를 제공하는 사이트는 블로그 및 토론 그룹의 기능이 포함되어 있어 누구든 플랫폼에 대한 지식과 의견을 공유할 수 있다.
  
  + 오픈 핸드셋 얼라이언스(Open Handset Alliance)
+ 
  오픈 핸드셋 얼라이언스는 한국어로 개방형 휴대 전화 동맹이라고 하며 줄여서 OHA라고 불린다. 개방형 휴대폰 동맹은 완전 개방형 모바일 플랫폼 개발을 위해 구글 중심으로 결성된 단체이다. 2007년말 단말기, 반도체, 통신 서비스, 소프트웨어, 상용화 등 5가지 분야를 대표하는 총 34개의 회사들이 연합했다. 세계 유수의 IT 기업인 구글, 인텔, 모토로라, 퀄컴, 삼성전자, LG전자 등이 참여하고 있다.
  모바일 업계의 리더들이 모인 OHA는 모바일 기기를 혁신하고 사용자에게 새로운 모바일 경험을 제공하기 위한 다국적 연합체이며, 그 첫번째 결실이 모바일 기기에 사용하는 포괄적 오픈 플랫폼인 ‘안드로이드(Android)’의 개발이다.
   안드로이드 소프트웨어 개발자 키트에는 고급 개발 및 디버깅 툴, 풍부한 라이브러리, 트루 디바이스 에뮬레이터, 심층적인 문서화 자료, 샘플 프로젝트, 튜토리얼, FAQ 등이 포함되어 있다. 또 개발자 키트를 제공하는 사이트는 블로그 및 토론 그룹의 기능이 포함되어 있어 누구든 플랫폼에 대한 지식과 의견을 공유할 수 있다.
@@ -33,69 +34,120 @@ Client 안드로이드
   ‘코틀린‘은 젯브레인이 2011년 만든 언어다. 자바가상머신(JVM) 언어라 자바와 호환되고 안드로이드 개발에 주로 활용된다. 현재 0.12버전까지 나왔다. 코틀린은 안드로이드 개발자로 유명한 제이크 왓슨이 알리면서 유명세를 탔다. 
   
   특징 
- ? 코틀린은 문법 자체가 간결하다. 코드 길이가 짧은 게 무조건 좋다고 단정할 수는 없는 부분이지만, 코드가 간결해지면 유지보수를 조금 더 편하게 할 수 있다. 또한 자바는 보통 정해진 원칙을 엄격하게 따르면서 쓰는데, 코틀린은 좀 더 다양하게 표현을 확장할  수 있다. 김상우 개발자는 “코틀린으로 작성해 기존 자바 코드보다 절반에서 최대 4분의 1로 코드를 줄인 적도 있다”라고 설명했다.
- ? 코틀린은 컴파일 속도가 빠른 편이고, 런타임 사이즈가 작아서 안드로이드에 넣기에도 부담이 적다. 또 자바에선 NULL값 관련한 오류가 자주 발생하는데, 코틀린에선 NULL값을 코드에서 없애는 것을 지향한다. 결과적으로 프로그램의 안정성을 높일 수 있다.
- ? 코틀린은 새로운 언어임에도 불구하고 통합 개발 환경(IDE)도 문제없이 사용할 수 있다. 제트브레인은 ‘인텔리J’라는 IDE를 만드는 업체다. 그런 면에서 제트브레인은 IDE에서 코틀린 도구나 플러그인을 적극적으로 지원하고 있다. 인텔리J로 자바에서 코틀린으로 코드를 자동 변환할 수도 있다. 자바에서 코틀린으로 코드 변환 시, 소스 파일 전체로도 가능하고 자바 코드를 복사해서 코틀린 코드로 붙여 넣을 때도 변환이 이루어진다. 
-④ 코틀린의 아쉬운 점은 아직 성숙되지 않았다는 점이다. 그렇기 때문에 언어 문법이 조금씩 변한다. 이것은 신생 언어가 가지고 있는 숙명이기도 하다. 또 코틀린은 자바 개발자에게 익숙한 어노테이션 처리도구를 완벽하게 지원하지 않는다. 
-⑤ 코틀린은 국내 사용자가 별로 없어 아직 한글 자료를 찾기 쉽지 않다. 현재는 코틀린 공식 문서가 가장 좋은 참고자료다. 
+  
+ - 코틀린은 문법 자체가 간결하다. 코드 길이가 짧은 게 무조건 좋다고 단정할 수는 없는 부분이지만, 코드가 간결해지면 유지보수를 조금 더 편하게 할 수 있다. 또한 자바는 보통 정해진 원칙을 엄격하게 따르면서 쓰는데, 코틀린은 좀 더 다양하게 표현을 확장할  수 있다. 김상우 개발자는 “코틀린으로 작성해 기존 자바 코드보다 절반에서 최대 4분의 1로 코드를 줄인 적도 있다”라고 설명했다.
+ 
+ - 코틀린은 컴파일 속도가 빠른 편이고, 런타임 사이즈가 작아서 안드로이드에 넣기에도 부담이 적다. 또 자바에선 NULL값 관련한 오류가 자주 발생하는데, 코틀린에선 NULL값을 코드에서 없애는 것을 지향한다. 결과적으로 프로그램의 안정성을 높일 수 있다.
+ 
+ - 코틀린은 새로운 언어임에도 불구하고 통합 개발 환경(IDE)도 문제없이 사용할 수 있다. 제트브레인은 ‘인텔리J’라는 IDE를 만드는 업체다. 그런 면에서 제트브레인은 IDE에서 코틀린 도구나 플러그인을 적극적으로 지원하고 있다. 인텔리J로 자바에서 코틀린으로 코드를 자동 변환할 수도 있다. 자바에서 코틀린으로 코드 변환 시, 소스 파일 전체로도 가능하고 자바 코드를 복사해서 코틀린 코드로 붙여 넣을 때도 변환이 이루어진다. 
+ 
+- 코틀린의 아쉬운 점은 아직 성숙되지 않았다는 점이다. 그렇기 때문에 언어 문법이 조금씩 변한다. 이것은 신생 언어가 가지고 있는 숙명이기도 하다. 또 코틀린은 자바 개발자에게 익숙한 어노테이션 처리도구를 완벽하게 지원하지 않는다. 
+
+- 코틀린은 국내 사용자가 별로 없어 아직 한글 자료를 찾기 쉽지 않다. 현재는 코틀린 공식 문서가 가장 좋은 참고자료다. 
+
 + 젯브레인
+
   젯브레인은 체코 프라하에 본사를 둔, 직원 580명 규모의 중견 기업이다. 글로벌 IT 기업이 주로 영미권에서 활동한 것과 달리 젯브레인은 체코, 러시아, 독일에서 기반을 닦고 있다. 설립자와 CEO 등 주요 임원들은 러시아와 체코, 독일에 거주하고 있으며, 현재 지사는 프라하 외에 러시아 상트페테르부르크, 모스크바, 독일 뮌헨, 미국 보스턴에 자리 잡고 있다.
+  
   젯브레인은 2000년 세르게이 드미트리에프(Sergey Dmitriev), 발렌틴 키피아트코브(Valentin Kipiatkov), 유진 벨랴예프 (Eugene Belyaev) 등 3명의 러시아 개발자가 설립했다. 이 중 유진 벨랴예프 설립자는 최근 젯브레인을 떠나 새로운 IT 기업을 설립했으며, 나머지 2명은 여전히 젯브레인에 소속돼 있다. 세 사람은 처음에 투게더소프트라는 소프트웨어 업체에서 만났다고 한다. 자바 관련 기술을 개발하던 이들은 더 나은 개발도구를 꿈꿨다. 그리하여 나온 게 ‘똑똑하게(intelligent)’ 자바 코드를 리팩토링(refactoring) 할 수 있는 ‘인텔리J 리네이머’였다. 향후 IDE인 ‘인텔리J 아이디어(IDEA)’를 공개하며 큰 성장을 이뤄냈다.
+  
   젯브레인은 내부 제품을 소개할 때 ‘개발자 인체공학적(Developer ergonomics)인 IDE’라는 표현을 사용한다. 개발자들이 평소 필요로 하는 기능과 디자인을 제품에 녹여내고 있다는 뜻이다. 예를 들어 일반적인 코드 자동완성 기능은 관련된 클래스, 필드, 메소드 이름을 전부 보여주지만, 인텔리J IDEA는 현재 개발자가 작업하고 있는 코드의 문맥을 이해하고 이와 관련된 단어만 제공한다. 또한 자바뿐만 아니라 SQL, JPQL, HTML, 자바스크립트 같은 타 언어 문법을 이해하고 이와 관련된 기능을 추천해주며, 반복작업은 자동화해 개발자가 큰 그림에 집중하도록 돕는다. 다양한 단축키와 검색 기능을 제공하는 건 기본이다.
+  
   2009년 젯브레인은 중요한 결정 하나를 발표했다. 핵심 기술이었던 인텔리J 관련 플랫폼을 오픈소스 기술로 전환하겠다는 소식이었다. 젯브레인은 공식 포럼을 통해 “많은 사람들이 비용 문제로 좋은 개발도구를 사용하지 못하고 있다”라며 “인텔리J IDEA가 더 많이 성장했으면 하는 바람으로 오픈소스 기술로 전환했다”라고 설명했다. 또한 “소스코드를 공개해 서드파티 라이브러리 같은 관련 생태계가 발전했으면 좋겠다”라는 뜻도 밝혔다. 2009년 이후 인텔리J 플랫폼은 무료로 이용할 수 있는 커뮤니티 버전과 유료 제품인 얼티메이트 버전으로 나눠 제공되고 있다. 구글은 아예 인텔리J 플랫폼을 기반으로 자체 IDE인 ‘안드로이드 스튜디오’를 만들기도 했다.
+  
   자바 개발 도구로 인기를 끌었던 젯브레인은 기술 영역을 부지런히 확장했다. IDE분야에선 PHP, 파이썬, 루비, 자바스크립트, 오브젝티브C, C++, C, SQL, C#을 개발할 수 있는 자체 도구들을 개발했다. 특히 새로운 언어가 막 등장할 때 발 빠르게 개발도구를 내놓아 새로운 실험을 좋아하는 개발자들에게 도움을 주었다. 개발도구 뿐 아니라 해당 언어를 배울 수 있는 안내서나 교육 프로그램도 체계적으로 제공하고 있다. 2014년부터는 아예 학생용 라이선스를 따로 공개했는데, 이 라이선스는 2시간 동안 2만 명이 신청할 정도로 큰 관심을 받았다. 젯브레인 학생용 라이선스를 가장 많이 신청한 나라는 미국이었으며, 한국 학생 신청자 수는 9번째로 많았다. 
+  
 +  IDE(통합개발환경, Integrated Development Environment)
+
   IDE는 효율적으로 소프트웨어를 개발하기 위한 통합개발환경 소프트웨어 어플리케이션 인터페이스이다. 코드 편집기, 디버거, 컴파일러, 인터프리터 등을 포함하고 개발자에게 제공한다. 이에 더하여 통합개발환경은 개발자가 소프트웨어를 개발하는 과정에 필요한 모든 작업을 하나의 소프트웨어에서 처리할 수 있는 환경을 제공한다. 초기 소프트웨어 개발 시스템은 코드 편집기, 컴파일링, 디버깅 등과 같은 개발 과정을 각각의 프로그램에서 사용했으며 콘솔을 통한 개발이 불가능했다.
+  
   최초의 통합개발환경은 소프트랩(Softlab)에서 1975년에 개발된 마에스트로 I(Maestro I)이다. 다트머스대학교의 존 케메니(John Kemeny)와 토머스 커츠(Thomas Kurtz)가 개발한 다트머스 베이직(Dartmouth BASIC) 언어에서 처음으로 통합개발환경을 사용하였다. 다트머스 베이직은 절차적 언어로 현대 베이직 프로그래밍 언어의 시초이며 코드 편집기와 파일 관리, 컴파일링, 디버깅, 실행 등이 포함되어 있었다. 이는 통합개발환경 소프트웨어의 기본이 되었다. 통합개발환경 소프트웨어 개발 이후 콘솔과 터미널을 통한 개발이 가능해졌으며, 다양한 운영체제와 플랫폼에서 개발을 할 수 있게 되었다. 또한 일부 소프트웨어는 여러 개의 프로그래밍 언어를 함께 지원한다.
+  
  대표적으로 이클립스, JDE, 안드로이드 스튜디오, 비주얼 스튜디오, 델파이, RStudio, 넷빈즈, 코드블럭스 등이 있으며, 가장 많이 사용되는 IDE는 IBM에서 개발한 이클립스와 마이크로소프트에서 개발한 비주얼 스튜디오이다. 또한 클라우드 환경에 맞춘 클라우드 IDE가 개발되었으며, 이로 인해 개발자의 협업이 가능해졌다. 여러 개발자가 동시에 코드를 작성하거나 리뷰를 하고 공유하는 것이 가능하며, 운영체제와 웹브라우저의 종류에 관계 없이 사용 가능하다. 대표적으로 Cloud9, JSFiddle, Icenium, Codenvy 등이 있다. 
+ 
 + 인텔리J IDEA
+
  IntelliJ IDEA는 젯 브레인 사에서 제작한 상용 자바 통합 개발 환경이다. 줄여서 IntelliJ 혹은 IDEA로도 불린다. 
+ 
 + 안드로이드 스튜디오 
+
  구글이 안드로이드 앱 개발을 위해 JetBrains 사의 IntelliJ IDEA를 기반으로 만든 통합 개발 환경이다. 2014년 10월부터 이클립스를 대체해 안드로이드의 공식 IDE가 되었다. 무료로 제공되고 있으며 Windows, macOS, 리눅스를 지원한다. 2017년 5월부터 안드로이드의 공식 프로그래밍 언어로 채택된 Kotlin도 사용 가능하다.
+ 
 + 제이크 왓슨
+
  제이크 왓슨은 현재 스퀘어에 근무하고 있으며, 안드로이드와 관련한 다양한 오픈소스 프로젝트에 참여했다. 
+ 
 + 스퀘어
+
   트위터의 공동 창업자인 잭 도시가 2009년 창업한 온라인 결제서비스 기업이다. 신용카드결제에 필요한 단말기를 설치하지 않고 개인이 소지한 스마트폰을 포스 시스템으로 활용하여 결제하도록 함으로써 단말기 설치비용과 수수료를 절감할 수 있다.
+  
   개인의 결제를 위해서는 그저 스마트폰·태블릿PC 같은 모바일 기기에 스퀘어 애플리케이션(앱)을 깐다. 그다음 무료로 제공되는 정사각형(스퀘어) 모양의 리더기를 이어폰 잭에 꽂으면 그만이다. 소비자가 건넨 신용카드를 리더기에 긁으면 거래 정보가 앱을 통해 전자 암호화돼 카드사에 넘겨진다. 큰돈을 들여 전용 단말기를 구입할 필요도 없다. 3~5%에 달하는 카드사 수수료에 비해 스퀘어 가맹 수수료는 2.75%에 불과하다. 
+  
   스퀘어의 성장세는 놀랍다. 2009년에 첫 서비스를 시작한 이후 지난해 스퀘어를 통해 결제된 금액만 30조 원이 넘는다. 지금까지 영국의 버진그룹·스타벅스 등으로부터 수천억 원을 투자받았고 기업 가치만 약 50억 달러(5조4000억 원)로 추산된다. 
+  
  2) 자바 
+ 
   자바는 썬 마이크로시스템즈의 제임스 고슬링(James Gosling)과 다른 연구원들이 개발한 객체 지향 프로그래밍 언어로서 보안성이 뛰어나며 컴파일한 코드는 다른 운영 체제에서 사용할 수 있도록 클래스(class)로 제공된다. 이는 세계에서 가장 널리 쓰이는 프로그래밍 언어이다. 간단한 PC용 소프트웨어나 게임, 웹 애플리케이션은 물론, CRM, ERP, SCM 등의 기업용 애플리케이션을 만드는 SI(시스템 구축) 작업에 많이 쓰인다. 게임의 경우 모장(Mojang)이 만든 마인크래프트(Minecraft)가 자바 플랫폼 위에서 작동하는 대표적인 사례다.   안드로이드 스마트폰 앱 개발도 대부분 자바를 통해 이뤄진다. 안드로이드 앱 개발의 진입 장벽이 낮은 이유도 개발자들이 기존에 익힌 자바 언어를 대부분 그대로 사용할 수 있기 때문이다. 또한 오라클이 밝힌 바로는 전세계 1억 2,500만 대의 TV, 30억 대의 휴대폰에 쓰이고 있으며, 블루레이 디스크에 나타나는 대화형 메뉴창은 대부분 자바로 개발됐다. 
+  
   특징
+  
  ① 자바는 간단하다 (simple)
  하나의 소프트웨어가 제작될 때는 소프트웨어를 제작하는 비용도 많이 들지만 유지 보수하는 비용도 어마어마하다. 자바 언어는 이러한 점을 고려하여 디자인되었다. 자바 언어는 C++를 기반으로 개발되었음에도 C++에서 혼란을 일으키는 부분을 제거했다. 예를 들면 연산자 오버로딩, 다중 상속 같은 것들이다. 그리고 C++에서 문제가 되는 기억 장소 경영 문제를 자동 쓰레기 회수와 할당(auto garbage collection)으로서 극복했다. 그러므로 프로그래머는 이것에 더이상 신경을 쓸 필요가 없다.
+ 
  ② 자바는 객체 지향 언어이다 (object oriented)
  요즘의 컴퓨터 언어는 객체 지향 언어로 개발된다. 자바도 객체 지향 언어이다. 객체 지향 언어에 대해 여기서 자세히 언급할 수는 없고 간단한 일례를 들면 상속이라는 것이 있다. 부모 객체로부터 자식 객체는 상속을 한다. 자식 객체가 부모 객체로부터 상속을 받으면 부모 객체의 데이터와 메소드를 사용할 수 있음을 의미한다. 따라서 소프트웨어를 개발할 때 재활용 측면에서 많은 장점을 가진다.
+ 
  ③ 자바는 보안에 강하다 (secure)
  자바는 원래부터 네트워크 분산 처리 환경에서 사용하기 위해 디자인된 언어이다. 네트워크 환경은 다른 환경보다 보안의 측면이 강조되는 환경인 만큼 자바는 보안에 중점을 두고 있다. 자바는 바이러스가 침투하지 못하는 구조를 가지고 메모리에서 데이터 접근을 제한할 수 있다. 접근을 허용하지 않으면, 애플리케이션의 데이터 구조 또는 데이터에 대한 접근은 불가능하다.
+ 
  ④ 자바 아키텍처는 중립적이다 (architecture neutral)
  네트워크는 다양한 기종의 컴퓨터와 다양한 플랫폼(예를 들면, 윈도 NT, 솔라리스, 매킨토시 OS 등의 운영 체제를 일컫는 말이다)과 다양한 하드웨어로 이루어져 있다. 자바는 자바 코드 소스를 컴파일하여 바이트 코드를 만들어내며 이 바이트 코드는 다양한 플랫폼에 설치된 자바 인터프리터에 의해 해석되기 때문에 어떠한 플랫폼에서도 실행 가능하다. 따라서 새로운 기계라도 자바 인터프리터만 설치되어 있으면 바이트 코드를 해석할 수 있다.
+ 
  ⑤ 자바는 이식성이 높다 (portable)
  기존의 언어는 각각의 플랫폼마다 수치 연산 문제 등으로 인하여 약간씩 다른 코드를 사용한다. 그러나 자바는 이식성이 강하여 다른 운영 체제, 다른 CPU에서도 같은 코드를 사용할 수 있다. 이식성이 높을 때의 단점은 각각의 시스템의 특성을 고려하지 않기 때문에 최적의 성능을 얻어낼 수 없는데, 자바는 이러한 것을 극복한 언어이다.
+ 
   이름의 유래
  제임스 고슬링이 주도하던 프로젝트의 코드명은 오크(Oak) 혹은 프로젝트의 이름을 따서 그린(Green)이라고 불렀으며, 자바라는 이름이 붙은 것은 그 이후다. 이 이름의 유래에 관한 설은 다양하다. 그가 프로젝트의 이름을 생각하던 중, 책상에 놓인 자바산 커피가 눈에 들어왔다는 설이 있다. 또 다른 설은 썬 마이크로시스템즈가 프로젝트 이름을 위해 관계자들을 가둬놓고 마라톤 회의를 시키면서 특정 질문에 연상되는 단어를 떠올리게 했을 때 자바산 커피라는 단어가 나와서 이를 선택했다는 소문도 있다.
 소문은 이렇게 무성하지만, 공통적으로 포함하는 내용은 역시 자바산 커피다. 실제로 제임스 고슬링은 평소 인도네시아 자바산 커피를 즐겨 마신 것으로 유명하다. 또한, 자바의 로고는 커피잔과 접시로 구성된 것을 봤을 때 자바산 커피에서 프로젝트 이름을 따왔다는 설이 유력하다.
+
 + 제임스 고슬링
+
  제임스 고슬링은 1955년 캐나다 앨버타 주에서 태어났다. 1977년 캘거리 대학에서 컴퓨터 공학 학사를, 1983년 카네기 멜론 대학에서 컴퓨터 공학 박사 학위를 받는다. 박사학위를 수료한 이후 1984년부터 소프트웨어, 정보 기술 개발사인 '썬 마이크로시스템즈(SUN Microsytems)'에서 근무한다.
+ 
  자바는 1991년부터 제임스 고슬링이 재직 당시 주도한 '그린 프로젝트'에서 시작한다. 처음에는 냉장고, 전기밥솥, TV 등의 가전제품에 장착하는 컴퓨터 칩에 각종 기능을 넣기 위한 프로그래밍 언어로 쓰일 예정이었지만 계획이 무산됐다. 이 아이디어가 나온 20여 년 전만 하더라도 가전제품용 메모리나 컴퓨터 칩은 이런 프로그램을 구동할 성능을 갖추지 못했기 때문이다.
+ 
  마침 팀 버너스 리가 개발한 월드 와이드 웹이 선풍적인 인기를 끌기 시작했다. 제임스 고슬링은 웹이 널리 알려지기 시작한 1993년 무렵, 지금까지 개발해온 프로그래밍 언어가 월드 와이드 웹용 개발 언어인 HTML의 정적(靜的)인 부분을 보완할 수 있으리라 판단하고, 이를 웹과 결합하는 방법을 모색했다. 이를 통해 1995년 자바 1.0이 공개됐다. 당시 등장한 자바의 모토는 'WORA(Write Once, Run Anywhere)'다. 즉 개발 코드를 한 번만 작성하면 어떠한 플랫폼에서든 쓸 수 있다는 의미다.
+ 
  일반적으로 소프트웨어는 운영체제가 다르면 서로 호환할 수 없다. 예를 들어 윈도에서 사용하는 MS 오피스 같은 소프트웨어는 개발자가 맥OS X용을 별도 제작해 내놓지 않는 이상, 맥 사용자는 이를 이용할 수 없다. 제임스 고슬링은 이러한 문제를 가상 머신(JVM)을 활용하는 방법으로 해결했다. 운영체제와 자바로 개발한 프로그램 사이에 중계자 역할을 하는 가상 머신을 만들고, 이를 통해 모든 운영체제에서 똑같이 작동하는 프로그램을 만들 수 있다.
  개발자들은 환호했다. 운영체제에 자바 가상 머신만 설치돼 있으면 어떤 웹 브라우저에서든 '자바 애플릿(자바 기반 웹 브라우저 플러그인)'을 불러와 프로그램을 실행할 수 있었기 때문이다. 이후 등장한 JDK(자바 개발 도구) 1.2버전부터는 각 개발자가 다양한 플랫폼에서 사용할 수 있도록 자바 엔터프라이즈 에디션, 자바 모바일 에디션, 자바 스탠다드 에디션 등을 만들었다.
+ 
  자바는 웹 브라우저에서 추가기능을 실행하기 위해 별도의 소프트웨어(자바 런타임 등)을 설치해야 한다는 점에서 액티브X와 유사한 듯 보인다. 하지만 윈도 운영체제와 인터넷 익스플로러에 종속된 액티브X와 달리, 자바는 거의 모든 운영체제와 웹 브라우저에서 작동하기 때문에 호환성이 높다.
+ 
  한편, 썬 마이크로시스템즈는 2009년 오라클(Oracle)에 인수됐다. 일명 '닷컴 버블'이라고 불리는 인터넷 기업 붐이 시들해지면서 어려움을 맞은 것이다. 제임스 고슬링은 썬 마이크로시스템즈가 인수된 이후 오라클에서 약 1년간 최고 기술 책임자(CTO)로 활동한다.
+ 
 + 썬 마이크로시스템즈(SUN Microsytems)
+
  유닉스(Unix)OS를 기반으로 컴퓨터 서버, 저장시스템 및 웹 구축 소프트웨어를 개발한 미국의 소프트웨어 제조업체다.
  썬 마이크로시스템사는 1982년 스탠포드 경영대학원생이던 스콧 맥닐리(현 회장)와 버클리대의 컴퓨터 천재 빌 조이 등 4명의 대학원생이 모여 만든 벤처기업으로 출발했다. 1995년 인터넷용 컴퓨터 언어인 자바를 개발, 수동적인 문서 열람에 그쳤던 인터넷을 다양한 동영상·음향·게임 등을 즐길 수 있는 동적인 공간으로 변화시켰다. 이 때문에 인터넷 분야에서는 마이크로소프트(MS)를 능가한다는 평가를 받기도 하였다. 1998년 성적은 매출 98억 달러, 순이익 7억 달러. 1998년 11월 미 최대 PC통신 업체인 아메리카온라인 (AOL) 과 제휴를 맺고 차세대 네트워크를 개발하였다.
+ 
  하지만 2001년 벤처 사업부문의 거품, 온라인 사업부문의 판매 부진으로 인해 전체 수익이 감소하면서 사업은 큰 타격을 입었다. 이에 선마이크로시스템스는 사업축소와 구조조정을 단행하였으며, 2005년 다시 1900만 달러의 흑자를 벌어들였다. 이후 기술자원 확보를 위해 베이징, 텔아비브, 도쿄 등 세계 곳곳에 지사를 세웠으나, 2010년 오라클사에 의해 74억 달러로 인수되었다. 인수 후에는 오라클 아메리카(Oracle America, Inc.)로 회사명이 바뀌었다. 
+ 
 + 오라클
+
  오라클은 비즈니스 소프트웨어와 하드웨어 시스템을 개발, 판매하는 다국적 회사로 미국 캘리포니아 주에 본사가 있다. 포춘 100대 기업을 포함해 145개가 넘는 나라에서 수십만 명의 고객이 오라클 제품을 사용한다. 2007년 소프트웨어 매출 기준으로 마이크로소프트, IBM에 이어 3위 기업으로 선정되었으며, 2011년에는 마이크로소프트에 이어 2위를 기록했다. 2014년 현재 전 세계에서 12만 2,458명의 직원이 이 회사에서 일하고 있다.
+ 
  대표적인 제품은 데이터베이스 관리시스템인 오라클 DBMS(DataBase Management System)로 현재 유닉스 체제에서 가장 많이 사용된다. DBMS는 데이터를 효과적으로 이용할 수 있도록 정리하고 보관하기 위한 기본 소프트웨어이다. 그리고 전사적 자원관리 시스템인 ERP, 공급망 관리 시스템인 SCM, 고객관계관리 시스템인 CRM 소프트웨어도 개발한다. RDBMS 제품을 필두로 전 세계 DBMS 시장 점유율 1위를 기록하고 있으며 소프트웨어, 서버, 네트워크, 스토리지 등의 부문에서 뛰어난 기술력을 보유하고 있다.
+ 
  1977년 래리 엘리슨은 밥 마이너, 에드 오츠와 함께 소프트웨어 디벨럽먼트 래버러토리즈(Software Development Laboratories, SDL)를 세웠다. 1979년 SDL은 릴레이셔널 소프트웨어(Relational Software, Inc., RSI)로 이름을 바꾸었다. 1979년 RSI는 처음으로 상업용 RDBMS를 개발해 라이트패터슨(Wright Patterson) 항공사에 팔았다. 1982년 주력상품인 오라클 데이터베이스에 맞추어 회사 이름을 오라클시스템스(Oracle Systems Corporation)로 바꾸었다.
  1984년부터는 회사 매출액이 매년 두 배 가까이 오르면서 <잉크(Inc)>지가 선정한 '미국에서 가장 성장이 빠른 기업 50위'에 이름을 올렸다. 1986년 3월 나스닥에 주식을 상장했다. 1987년 오라클은 매출 1억 달러를 기록하며 전 세계에서 가장 큰 데이터베이스 관리회사로 발돋움했다.
+ 
  1989년 현재의 본사가 있는 레드우드로 이전했으며, S&P 500지수를 구성하는 기업에 이름을 올렸다. 1995년 처음으로 64비트 DBMS를 선보였으며, 다시 현재의 이름인 오라클(Oracle Corporation)로 바꾸었다. 2000년 자회사인 오라클모바일이 설립되어 휴대전화 사업에도 진출했다. 오라클 애플리케이션 서버는 휴대전화 분야에서 고객들의 좋은 평가를 얻었다. 2005년 인메모리 DB 전문기업 타임스텐을 인수, OLTP 전용 인메모리 DBMS인 ‘타임스텐’을 선보였다.
- 2009년 세계 4대 컴퓨터 서버업체인 미국의 선마이크로시스템스를 74억 달러에 인수해 하드웨어 분야에서도 선두주자로 나설 수 있는 발판을 마련했다. 2013년 기존 오라클 DBMS에 인메모리 기능을 옵션으로 넣은 ‘오라클 DB 12c 인메모리 옵션’을 발표했고, 2014년 6가지 새로운 오라클 클라우드 플랫폼 서비스를 출시했다.
- 2014년 매출액 382억 7천만 달러, 영업이익 147억 5천만 달러를 달성했다.
+ 
+ 2009년 세계 4대 컴퓨터 서버업체인 미국의 선마이크로시스템스를 74억 달러에 인수해 하드웨어 분야에서도 선두주자로 나설 수 있는 발판을 마련했다. 2013년 기존 오라클 DBMS에 인메모리 기능을 옵션으로 넣은 ‘오라클 DB 12c 인메모리 옵션’을 발표했고, 2014년 6가지 새로운 오라클 클라우드 플랫폼 서비스를 출시했다. 2014년 매출액 382억 7천만 달러, 영업이익 147억 5천만 달러를 달성했다.
+ 
 + DBMS
- 데이터베이스를 직접 응용 프로그램들이 조작하는 것이 아니라 데이터베이스를 조작하는 별도의 소프트웨어가 있는데 이를 데이터베이스 관리 시스템(DBMS : DataBase Management System)이라 한다. 즉 데이터베이스 관리 시스템이란 데이터베이스를 관리하며 응용 프로그램들이 데이터베이스를 공유하며 사용할 수 있는 환경을 제공하는 소프트웨어다
+
+ 데이터베이스를 직접 응용 프로그램들이 조작하는 것이 아니라 데이터베이스를 조작하는 별도의 소프트웨어가 있는데 이를 데이터베이스 관리 시스템(DBMS : DataBase Management System)이라 한다. 즉 데이터베이스 관리 시스템이란 데이터베이스를 관리하며 응용 프로그램들이 데이터베이스를 공유하며 사용할 수 있는 환경을 제공하는 소프트웨어다.
 
 5. 안드로이드는 누가 만들었을까?
  안드로이드의 창시자는 앤드 루빈이다. 그의 삶을 살펴보자.
