--- a/창의공 과제.md
+++ b/창의공 과제.md
@@ -150,142 +150,250 @@ Client 안드로이드
  데이터베이스를 직접 응용 프로그램들이 조작하는 것이 아니라 데이터베이스를 조작하는 별도의 소프트웨어가 있는데 이를 데이터베이스 관리 시스템(DBMS : DataBase Management System)이라 한다. 즉 데이터베이스 관리 시스템이란 데이터베이스를 관리하며 응용 프로그램들이 데이터베이스를 공유하며 사용할 수 있는 환경을 제공하는 소프트웨어다.
 
 5. 안드로이드는 누가 만들었을까?
+
  안드로이드의 창시자는 앤드 루빈이다. 그의 삶을 살펴보자.
+ 
  앤드루 "앤디" 루빈(영어: Andrew "Andy" Rubin, 1963년 3월 13일 ~ )은 미국의 기업인, 투자가, 프로그래머, 공학자이다. 현존하는 스마트폰 80% 이상에 설치돼 있는 운영체계(OS) 안드로이드를 개발한 인물로, ‘안드로이드의 아버지’라는 별칭으로 더 잘 알려져 있다.
+ 
 1963년 미국 뉴욕주에서 태어난 루빈은 어렸을 때부터 로봇에 관심이 많았다고 한다. 마케팅 회사를 운영하던 아버지가 홍보용 샘플로 받은 최첨단 전자기기를 매일 집에 가져온 영향이 컸다. 로봇에 대한 흥미는 그를 1981년 유타카대 컴퓨터 과학부로 이끌었다. 
+
  졸업 뒤에도 여전했던 ‘로봇광’ 성향 덕분에 1984년 입사한 애플에서는 ‘안드로이드’라는 별명을 얻었다. 이 별명은 후에 루빈이 창업한 회사이자, OS의 이름으로 이어진다. 2003년 안드로이드를 창립했다. 
+ 
  데인저 사(社) 및 안드로이드 사 공동 창립자이자 전직 CEO를 역임하였으며 2003년 자신이 창업한 안드로이드사(社)를 2005년 5000만달러에 구글에 매각했다. 구글이 안드로이드 사를 인수한 후 구글의 모바일 부문 수석 부사장으로 일하며 안드로이드 소프트웨어 플랫폼을 비롯한 그것을 이용한 휴대 전화의 개발 업무를 관장하였다. 2014년에 구글에서 퇴사 후 에센셜 사를 창립하였다.
+ 
  앤디 루빈은 뉴욕주의 호레이스 그릴리 고등학교(Horace Greeley High School)와 유티카 대학교(Utica College)를 졸업했다. 애플에서 엔지니어로서 일을 시작하였다. 나중에 애플을 나와 제네럴 매직이라는 회사로 옮긴다. 휴대용(hand held) 기기를 위한 운영체제와 인터페이스, 이름하야 매직 캡(Magic Cap)을 만드는 회사였다. 매직 캡이 실패하자, 루빈과 그의 동료 몇 명은 제네럴 매직을 떠나 아르테미스 리서치(Artemis Research)사를 설립한다. 이 회사는 나중에 WebTV 사가 됐다. 이 회사는 마이크로소프트가 인수합병한다. 
+ 
  몇 년이 지나, 루빈은 마이크로소프트를 나왔다. 그와 그의 동료는 데인저 사를 만든다. 데인저 힙탑이라는 초창기 스마트폰을 만들었는데, "기술을 좋아하는" 마니아 계층에서 컬트하게 인기있었다. 앤디 루빈은, 이후, 데인저 사에서 퇴사하고 안드로이드 사를 만들었다. 안드로이드 사는 다시 구글에 인수되었고, 2013년까지 안드로이드 플랫폼의 총 책임자로 근무하였다. 2013년 5월 13일 앤디 루빈은 안드로이드 플랫폼 총 책임자에서 물러나 구글의 로봇 분야 책임자로 근무하였다 2014년 10월 31일 앤디 루빈은 구글을 퇴사하고 같은 해 벤처 투자회사 ‘플레이그라운드 글로벌’을 설립하였으며 2015년 벤처기업 에센셜 사를 설립하였다. 2017년 11월 구글 재직시에 있었던 부적절한 관계가 보도됨에 따라 에센셜 사의 운영에서 잠시 물러났다가 당해 12월 복귀하였다. 
+ 
 + 제네럴 매직
+
  제너럴 매직은 91년 애플, AT&T, 마쓰시타, 소니, 필립스, 모토 롤러 등의 후원을 등에 업고 세상에 선을 보인 업체이다. 세계 가전업계의 3대업체가 모처럼 뜻을 모은데다가 컴퓨터와 통신 분야에서 선두를 달리는 업체들이 참여해 탄생 당시부터 주목을 받아왔다. 이 회사에는 또 애플 출신의 프로그래머들 이 상당수 참여해 새롭고 참신한 제품을 선보일 것으로 오래 전부터 기대를 모아왔다. 이러한 제너럴 매직이 4년여에 걸친 연구개발끝에 지난달 내놓은 제품이 바로 "텔리 스크립트"와 "매직캡"이다. 텔리스크립트는 광통신과 무선통신망의 세계 표준을 겨냥한 컴퓨터 언어이며 매직캡은 개인정보단말기(PDA) 와 대화 형 TV 컨버터박스의 운용체계로 개발된 제품이다. 
+ 
 + 마이크로소프트사
+
  마이크로소프트는 IBM PC 호환용 개인용 컴퓨터의 운영 체제 DOS와 윈도를 개발한 소프트웨어 회사다. 운영 체제의 우월적인 지위를 이용해 인터넷 시대에 웹브라우저 익스플로러를 끼워 팔다가 반독점법 위반으로 고소되기도 했다. 거치형 개인용 컴퓨터에서 스마트폰과 모바일 기기로 이용자들의 행태가 옮아가면서 마이크로소프트의 독점적인 지배권도 약화되고 있다.
+ 
  좀 더 자세히 살펴보자. 알테어용 베이식 언어 해석기를 개발한 마이크로소프트는 IBM 호환용 PC가 시장에 선을 보이자 PC에 필요한 운영 체제를 개발하기 시작한다. 마이크로소프트 도스(Microsoft Disk Operating System)는 1981년 처음으로 IBM PC에 제공되었다. 마이크로소프트 도스는 마이크로소프트가 IBM의 의뢰를 받아 시애틀컴퓨터시스템으로부터 사들여 개발한 IBM PC용 운영 체제(CP/M 86 호환의 DOS)다. 당시에 디지털 리서치(Digital Research, Inc)의 개리 킬달(Gary Kildall)이 제작한 CP/M이라는 인텔 8080/85 마이크로프로세서용 운영 체제가 이미 존재하고 있었다. 엄밀하게 따지자면 마이크로소프트 도스는 빌 게이츠 자신이 개발한 것은 아니고 다른 회사에서 개발한 IBM용 PC의 운영 체제를 구입해서 손질한 후 IBM 컴퓨터의 운영 체제로 다시 판매한 것이다.
+ 
  마이크로소프트는 이후에 애플의 그래픽 유저 인터페이스 운영 체제(GUI) 윈도즈(Windows)를 개발해서 1990년대 중반에 IBM 호환 개인용 컴퓨터 시장의 절대량을 장악하는 지배력을 갖게 된다. 마이크로소프트가 수행한 일련의 소프트웨어 판매 개발 방식은 지적재산권을 활용해 독점적인 소프트웨어 시장을 만드는 것이다. 이러한 사업 방식은 운영 체제의 독점과 닫힌 체제로 연결되었다.
+ 
  마이크로소프트는 IBM 호환형 개인용 컴퓨터의 운영 체제를 독점하고 있다. 윈도라는 운영체계가 시장에서 독점적 지위를 차지하게 되면 대다수 응용 프로그램도 그 운영 체계의 지배를 받게 된다. 마이크로소프트는 운영 체제의 독점적 지위를 이용해 윈도98 버전에 마이크로소프트 익스플로러를 함께 무료로 공급했다. 이후 윈도XP 버전에서는 인터넷 폰, 메신저 프로그램 등 다른 응용 프로그램들을 무료로 공급했다. 마이크로소프트는 운영 체제의 독점을 기반으로 응용 프로그램 시장을 잠식하고 새롭게 부상하는 인터넷 사업에서 주도권으로 확장하려고 시도했다.
+ 
  한국에서는 인터넷 익스플로러에 대한 의존도가 상대적으로 높다. 이는 온라인 뱅킹이나 공공 기관들이 웹브라우저의 호환성을 고려하지 않은 채 ActiveX를 무리하게 이용해 웹 페이지를 만들었기 때문이다. 어떤 웹사이트는 인터넷 익스플로러 웹브라우저에 최적화되었다거나 아예 다른 웹브라우저로는 제대로 볼 수 없도록 디자인되기도 했다.
+ 
  이러한 익스플로러 의존성이 웹 호환성 부족이라는 한국 웹의 왜곡된 현상을 낳게 되었다. 이것은 웹 표준을 따르지 않고 마이크로소프트의 인터넷 익스플로러(Internet Explorer, IE)에서만 작동되는 비표준 기술을 남용했기 때문에 생겨난 현상이다. 그러나 구글이 크롬이라는 웹브라우저를 공개하고, 스마트폰 시장이 활성화되고, 모바일 운영 체제가 다양화되면서 마이크로소프트의 익스플로러는 과거와 같은 지배력을 더 이상 행사하지 못하게 되었다. 세상이 바뀌면 기업의 위상도 바뀌는 것이다.
+ 
 +  IBM
+
  IBM(International Business Machines Corporation)은 컴퓨터 하드웨어와 소프트웨어를 생산 판매하고, 컨설팅 서비스를 제공하는 대기업이다. IBM은 기업의 사무에 필요한 사업 관련 기계를 생산하는 데서 출발, 제2차 세계대전을 전후해 컴퓨터 개발을 선도하는 기업으로 떠올랐다. IBM은 1960년대 중반까지 중대형 컴퓨터 시장을 장악했다. 1980년대에는 PC 아키텍처를 선보이고, 그를 공개해 개인용 컴퓨터의 대중화를 선도하는 중요한 역할을 했다. 이후 중대형 컴퓨터 시장이 쇠퇴하고 개인용 컴퓨터 시장에서 마이크로소프트를 위시로 하는 소프트웨어 부문이 떠오르자 상대적으로 정보산업 분야에서 차지하던 위상이 약화되었다.
+ 
  1981년 IBM은 'IBM 5150'을 출시해 개인 컴퓨터 시대를 열었지만 운영 체제와 소프트웨어 분야를 새로 떠오르는 마이크로소프트에게 빼앗겼고, 중형 서버는 썬 마이크로시스템즈에 밀렸다. 이후 인터넷 시대에도 적절한 대응을 하지 못했다. 그래서 전통적인 컴퓨터 분야에 제한된 사업 영역을 고수한다는 보수적 이미지를 갖고 있기도 하다.
+ 
  그러나 IBM은 오랜 전통을 기반으로 기초 과학기술과 컴퓨터 응용기술에 지속적으로 투자함으로써 정보 산업의 견인차 역할을 담당하고 있다. 특히 전통적으로 우위를 점했던 슈퍼컴퓨터나 인공지능 등 컴퓨터 개발 분야에서 선두 역할을 담당하고 있다. IBM은 사업 전략을 선회해 1998년부터 리눅스를 필두로 하는 오픈 소프트웨어 체제를 받아들여 새롭게 혁신을 감행하고 있다.
 
 6. 구글 안드로이드의 역사
+
   안드로이드폰이 나오기 전까지를 먼저 살펴보자. 
+  
  아이폰의 제조 및 아이폰의 운영체제인 ‘iOS’의 사용에 관한 권한은 애플이 독점하고 있어서 애플 외의 회사에서 아이폰과 호환되는 스마트폰을 만드는 것은 불가능하다. 하지만 당시 스마트폰 시장에서 iOS에 맞설만한 기능과 편의성을 갖춘 모바일 운영체제는 없었다. 이런 이유로 다른 제조사들은 애플이 스마트폰 시장을 장악하는 것을 보고만 있을 수밖에 없었다.
+ 
  아이폰의 인기는 제조사들뿐 아니라 이동통신사들의 고민거리이기도 했다. 애플은 아이폰 자체를 팔아서 얻는 수익만큼이나 아이폰용 앱을 팔아서 얻는 수익도 컸는데, 앱 스토어에서 사용자가 앱을 구매하는 경우, 그 수익 중에 앱 개발자가 70%, 그리고 수수료 명목으로 애플이 나머지 30%를 거두게 되어있었다. 30%의 수수료는 애플과 신용카드 회사의 수익, 그리고 운영 비용 등으로 배분 되는데, 그래서 아무리 아이폰이 많이 팔리고 앱이 인기를 끌어도 이동통신사들은 통신 요금 외의 수익을 기대할 수 없었다.
+ 
   이러한 시장 상황을 가장 정확하게 파악한 업체 중 하나가 바로 세계 최대의 검색엔진 업체인 구글이었다. 새로운 동력원을 찾기 위해 스마트폰 시장에 눈독을 들이고 있던 구글은 2005년, 모바일 소프트웨어 개발업체인 ‘안드로이드(Android)’사를 인수하여 본격적인 모바일 운영체제의 개발에 나섰다. 그리고 2007년 10월, 구글은 삼성전자, LG전자, 모토로라, HTC, T모바일, NTT도코모, 브로드컴, 퀄컴 등과 함께 ‘오픈 핸드셋 얼라이언스’를 결성하고 개방형 모바일 운영체제인 ‘안드로이드(Android)’를 발표했다.
+  
  안드로이드 운영체제를 탑재한 최초의 스마트폰은 2008년 10월, 미국에 첫 출시된 HTC의 ‘G1’이다. ‘드림(Dream)’이라는 제품명으로 불리기도 한 이 스마트폰은 3.2인치의 크기와 320x480 해상도를 갖춘 터치스크린 LCD를 탑재했고, 528MHz의 프로세서와 쿼티(QWERTY) 방식의 슬라이드 키보드를 가진 것이 특징이었다.
+ 
  HTC G1에는 안드로이드 1.0 버전(이후 1.6 버전까지 업데이트)이 탑재되어 있었는데, 출시 당시에는 안드로이드 마켓을 지원하지 않는 등, 활용 면에서는 한계가 있었다. 하지만 당시부터 안드로이드폰은 ‘구글폰’, 혹은 ‘G폰’ 등으로 불리며 아이폰의 대항마로 주목 받고 있던 터라 HTC G1은 미국, 캐나다, 영국, 호주, 싱가포르 등 다양한 국가에 출시되며 6개월 동안 100만대 정도의 적지 않은 판매량을 기록했다.
  HTC G1의 출시 이후에도 몇 종의 안드로이드폰이 더 나왔지만 판매량은 그다지 눈에 띄지 않았다. 우선, 기계적으로도 그다지 매력적인 제품이 많지 않았으며, 안드로이드 운영체제 역시 아직 보완할 점이 많았다.
+ 
  하지만 2009년 10월에 미국에 출시된 모토로라의 ‘드로이드(Droid, 유럽명: 마일스톤, 한국명: 모토쿼티)’가 큰 인기를 끌면서 안드로이드폰은 본격적인 스마트폰 시장의 한 축으로 떠올랐다. 드로이드는 3.7인치 크기의 고해상도(480x854) 화면 및 타이핑 감각이 우수한 쿼티 키보드, 그리고 기능이 한층 향상된 안드로이드 2.0 운영체제를 탑재했다. 드로이드는 출시 74일만에 105만대를 판매하는 등, 한때는 아이폰의 판매량을 능가할 정도로 인기를 끌기도 했다.
  모토로라의 드로이드로 가능성을 증명한 안드로이드폰 시장은 2010년 6월부터 세계 시장에 출시를 시작한 삼성전자의 ‘갤럭시 S(Galaxy S)’로 본격적인 활성화가 시작되었다.
+ 
 갤럭시 S는 쿼티 방식 키보드를 적용하지 않은 대신 4인치의 넓은 화면과 9.9mm의 얇은 두께를 실현했으며, 화질이 우수한 AMOLED 화면, 처리 속도가 빠른 1GHz 프로세서 등, 기능과 성능, 디자인 면에서 기존의 안드로이드폰을 능가했다. 갤럭시 S는 한국 출시 2개월 만에 90만대, 미국 출시 1개월 만에 100만대를 판매하는 등 세계적으로 큰 인기를 끌었다. 이후 갤럭시 S 시리즈는 후속 모델을 매년 출시하며 안드로이드폰 진영을 대표하는 제품으로 자리 잡았다.
   안드로이드의 버전의 역사를 살펴보자. 
+  
  우선 국내 사용자에게 친숙한 버전은 안드로이드 2.0버전인 이클레어부터 시작되었다. 이후 소프트웨어 성능이 올라가면서 하드웨어 속도 또한 빨라져서 아이폰의 최강점으로 불렸던 멀티터치 기능은 이클레어 버전부터 공식 추가되었다. 
+ 
 2010년 5월 안드로이드는 2.2버전인 프로요로 진화하면서 속도가 2배에서 최대 5배까지 빨라졌다. 속도가 빨라지면서 슬슬 사용하는 사람들이 증가하였다. 
 안드로이드의 대중화를 이끈 2.3버전인 진저브레드는 2010년 12월에 공개 되었는데, 이는 멀티미디어 성능이 강화되었다. 비디오 감상, 다양한 오디오 효과 및 믹싱, 새 비디오 코덱 등 다양한 기능이 추가되고 근거리 무선통신도 기본적으로 지원됐다.
+
  이후 스마트폰 뿐만 아니라 태블릿 PC에 쓸 수 있는 별도 안드로이드 버전을 개발했는데, 2011년 2월 공개된 안드로이드 3.0 허니컴은 태블릿을 위해 탄생했다. 화면에 맞게 위젯 등도 새롭게 디자인되어 멀티테스킨 기능도 확대외었다. 하지만 태블릿 전용 운영체제는 그리 오래가지 않았다. 이는 굳이 스마트폰과 태블릿을 따로 나눌 필요성이 적었기 때문이다. 구글은 다음 버전에서 2.3과 3.0 버전을 통합화시킨 4.0 아이스크림샌드위치를 2011년에 공개했다. 
  2012년에는 안드로이드 4.1버전인 젤리빈을 공개 하면서 기존보다 더 빨라지고 부드러워진 사용자 인터페이스가 사용되었다. 검색 기능도 지식 그래프를 사용해 더 탁월한 결과물을 감상할 수 있었다. 구글 나우가 발표되면서 더욱 화제가 되었는데, 구글 나우란 교통 정보나 일정관리, 스케줄 검토, 심지어 선호하는 야구팀의 경기 결과까지 알려주곤 했다. 이처럼 길었던 젤리빈은 2013년 10월에 막을 내렸다. 
+ 
  이후 새롭게 나온 킷캣은 구글의 음성검색이 좀 더 스마트해졌다. “오케이 구글”을 외치면 음성 인식이 동작하도록 되어있다. 
 
 7. 더 알아보기
+
 1) 젯브레인과 코틀린
+
  안드로이드 스튜디오, Kotlin등 으로인해 예전부터 구글이 젯브레인을 인수하는것 아니냐는 의심을 많이 사고는 했다. 젯브레인은 공식 블로그에서 구글에 인수계획은 전혀 없으며 다른 IDE등 도구 개발에도 영향이 없을 것이라고 밝다. 다만 안드로이드 스튜디오용 플러그인을 만드는 일에 대해서는 젯브레인이 안드로이드 스튜디오팀과 협업하며 이어간다고 했다. 또한 이에 더하여 Kotlin 언어를 개발한 젯브레인은 구글과 함께 Kotlin 재단을 만들어 발전시켜 나가기로 했다고 한다. 또 Kotlin 컨퍼런스가 올해 11월 2~3일까지 샌프란시스코에서 열린다.
+ 
 2) 마이크로소프트사와 IBM사 (빌게이츠)
+
  '빅 블루(Big Blue)'란 애칭으로 불리던 IBM은 당초 개인용 컴퓨터 시장에 별 관심이 없었다. 메인프레임(mainframe) 시장을 장악하고 있던 그들에게 책상 위에 얹어 놓고 사용하는 조그마한 개인용 컴퓨터는 도무지 성에 차지 않았던 것이다. 게다가 개인용 컴퓨터 시장 전망도 그다지 밝은 편은 못됐다. 그 무렵까지만 해도 모든 사람들이 가정에 컴퓨터 한 대씩을 놓고 생활한다는 것은 상상도 하지 못할 때였다. 하지만 애플을 비롯해 탠디, 코모도어 등이 조금씩 영향력을 키워 나가자 IBM도 새롭게 떠오르는 시장에 주목하기 시작했다. 그때가 1980년이었다.
+ 
  당시 전성기를 구가하던 IBM은 존 오펠(John Opel) 사장이 이끌고 있었다. 애플의 기세에 주목한 오펠 사장은 개인용 컴퓨터 시장에 진출할 가치가 있는지를 알아보라고 지시했다. 이들은 개인용 컴퓨터 시장에서 강자로 떠오르던 애플컴퓨터를 집중 연구한 끝에 컴퓨터를 오픈플랫폼 형태로 만들기로 했다. 그리곤 기본 소프트웨어가 될 운영체제 개발은 다른 회사에 맡기기로 했다. 모든 것을 직접 개발했다가는 시장의 흐름을 제대로 따라잡지 못할 것이라고 판단한 것이다.
+ 
  IBM의 개인용 컴퓨터 개발 사업인 '맨해튼 프로젝트(Manhattan Project)'는 이런 과정을 통해 출발했다. 당시 프로젝트 팀장은 냉철한 천재로 통했던 잭 샘스(Jack Sams)가 맡았다. 샘스는 '맨해튼 프로젝트' 팀을 결성하자마자 곧바로 개인용 컴퓨터 시장에 대한 분석 작업에 들어갔다. 특히 IBM이 만들 개인용 컴퓨터의 운영체제를 공급할 회사들을 물색하던 이들은 마침내 마이크로소프트라는 조그만 회사를 주목했다. 그 무렵 마이크로소프트가 베이식이란 프로그램으로 나름대로 성공을 거두고 있는데다 매년 매출이 2배씩 늘고 있어 IBM에게 깊은 인상을 남겼다.
+ 
  '맨해튼 프로젝트'의 책임자였던 잭 샘스가 빌 게이츠에게 전화를 건 것은 1980년 7월의 일이었다. 샘스는 빌 게이츠에게 IBM이 새롭게 추진하는 개발 계획에 대한 의견을 나누기 위해 이른 시일 내에 만나고 싶다는 뜻을 전했다. 베이식을 기반으로 조금씩 성장 가도를 달리던 마이크로소프트 입장에서는 당대 최고 기업 IBM의 제안을 거절할 이유가 없었다. 전화가 걸려온 지 며칠 만인 7월 22일 마침내 잭 샘스가 이끄는 IBM '맨해튼 프로젝트' 팀이 마이크로소프트를 방문했다. 하지만 IBM은 당대 최고 기업답게 신중했다. 개인용 컴퓨터 개발 프로젝트는 철저히 비밀에 부친 채 빌 게이츠의 이야기를 주로 들었다. 비밀을 유지하기 위해 IBM이 추진하는 여러 프로젝트 중 하나라는 설명만 해 주었던 것이다. 그리고 자신들이 다시 연락할 때까지는 일체 연락하지 말라는 말을 남기고 돌아갔다.
+ 
  그리고 한 달 뒤 마침내 IBM으로부터 다시 전화가 왔다. 다시 마이크로소프트를 찾아온 IBM은 자신들이 비밀리에 추진하고 있던 '맨해튼 프로젝트'에 대해 털어놓았다. 그리고 1981년 4월까지 개인용 컴퓨터에 사용될 베이식 언어를 개발할 수 있겠느냐고 물었다. 그 당시 마이크로소프트 같은 조그마한 회사 입장에선 IBM의 사업 파트너가 될 기회를 마다할 이유가 없었다. 결국 두 회사는 16비트 마이크로프로세서를 기반으로 하는 개인용 컴퓨터 개발 작업을 함께하기로 하고 그해 10월에 한 차례 더 회동한 뒤 11월 6일 공식 계약을 체결했다. 이로써 마이크로소프트가 PC를 기반으로 세계 컴퓨터 시장을 호령할 기반을 갖출 수 있었다.
+ 
 마이크로소프트가 IBM의 PC 개발 프로젝트에 참여한 사건은 많은 이야깃거리를 만들어 냈다. 게다가 PC 개발 이후 마이크로소프트와 IBM의 운명이 극명하게 바뀌었기 때문에 더더욱 많이 회자됐다. 마이크로소프트가 MS?도스를 기반으로 컴퓨터 시장의 절대 강자로 군림한 반면 IBM은 이후 서서히 쇠퇴하면서 한때 퇴출 위기까지 내몰렸던 것이다. 두 회사의 계약을 두고 IBM이 트로이의 목마를 끌어들였다고 평가하는 사람들도 있다.
+
  당시 IBM이 개인용 컴퓨터 개발 프로젝트의 파트너로 마이크로소프트를 선택하게 된 배경을 놓고도 다양한 이야기들이 전해진다. 그 과정에서 빌 게이츠의 어머니가 적지 않은 역할을 했다는 설도 이런 이야기들 중 하나이다. 당시 빌 게이츠의 어머니가 미국 최대 자선 단체로 꼽히던 유나이티드 웨이(United Way)에서 존 오펠 IBM 사장과 교류한 덕에 마이크로소프트를 좀 더 쉽게 알릴 수 있었다는 것이다.
+ 
  반면 프레드릭 맥스웰이 전하는 이야기는 조금 다르다. 맥스웰에 따르면 IBM은 먼저 게리 킬달의 CP/M에 관심을 보였지만, 자가용 비행기 여행을 즐기는 킬달이 IBM과의 협상에 적극적으로 나서지 않는 통에 그 기회가 마이크로소프트로 넘어왔다는 것이다. 그리고 그 과정에서 빌 게이츠의 어머니인 메리 게이츠가 자선 단체에서 쌓은 인맥이 중요한 역할을 했다고 전하고 있다. 당시 IBM의 고위 간부는 빌 게이츠가 메리 게이츠의 아들이란 사실을 알고 난 뒤 직접 전화를 걸어 계약 문제를 논의하자고 제안한 것으로 돼 있다.
+ 
  물론 그 정확한 내막은 알 수가 없다. 한 가지 분명한 것은 마이크로소프트가 IBM의 역사적인 '맨해튼 프로젝트' 파트너로 낙점됐다는 사실이다. 그리고 그 과정에서 빌 게이츠를 비롯한 마이크로소프트 경영진들이 IBM의 노련한 엔지니어들을 만족시켰다는 점은 분명히 말할 수 있을 것 같다. 특히 빌 게이츠는 MITS와 계약할 때처럼 IBM과의 계약에서도 서툴기는 했지만, 사업가적 기질을 유감없이 발휘했다. 스무 살을 갓 넘은 컴퓨터 천재가 당대 최고 기업의 고위임원들을 상대로 성공적인 비즈니스를 해냈던 것이다. 당시 빌 게이츠와 면담했던 한 IBM 간부는 "빌은 만날 때마다 IBM을 가장 중요한 고객으로 생각한다는 인상을 강하게 심어 주었다. 때론 무료 조언을 해 주기도 했다"라고 털어놓기도 했다. 컴퓨터 산업의 미래에 관한 빌 게이츠의 확고한 비전이 IBM과의 협상에서 중요한 역할을 했던 것이다.
 
 Server   장고
+
 1. 장고란 ?
-  장고는 파이썬 기반 웹 애플리케이션 프레임워크다. 좀 더 쉽게 웹 개발을?할 수 있게?돕는 오픈소스 기술이다. 장고는 개발?과정을?단축시켜주고,?다양한?추가?기능을?포함하고?있으며?보안성이?높다.?유연하고?빠른?확장성을?제공해?CMS부터?SNS까지?다양한?플랫폼에?구축·활용되고?있다.
-  웹사이트를 만들 때는 비슷한 요소들이 필요하다. 예컨대 회원가입을 할 수 있어야 하고, 로그인해야 하며, 포스트를 만들 수 있어야 한다. 다수?웹사이트에서 이런 기능이?기본적으로 갖춰져 있다. 담고 있는 콘텐츠가 다르고, 성격에 따라 필요한 추가기능이 들어가는 식이다. 개발자는 비슷하거나 같은 일을 한 번에 처리하고자 한다. 비슷한 일을 여러 번 반복하는 것은?비효율적이기 때문이다. 웹 개발자들은 새로운 웹사이트를 만들 때 비슷한 문제를 만난다는 걸 알게 됐고, 웹사이트에 필요한 기본적인 구성요소들을 빠르게 만들 수 있는 다양한 프레임워크를 만들었다. '장고(Django)'도 그 가운데?하나다. 
+
+  장고는 파이썬 기반 웹 애플리케이션 프레임워크다. 좀 더 쉽게 웹 개발을 할 수 있게 돕는 오픈소스 기술이다. 장고는 개발과정을 단축시켜주고, 다양한 추가기능을 포함하고 있으며 보안성이 높다. 유연하고 빠른 확장성을 제공해 CMS부터 SNS까지 다양한 플랫폼에 구축·활용되고?있다.
+  
+  웹사이트를 만들 때는 비슷한 요소들이 필요하다. 예컨대 회원가입을 할 수 있어야 하고, 로그인해야 하며, 포스트를 만들 수 있어야 한다. 다수 웹사이트에서 이런 기능이?기본적으로 갖춰져 있다. 담고 있는 콘텐츠가 다르고, 성격에 따라 필요한 추가기능이 들어가는 식이다. 개발자는 비슷하거나 같은 일을 한 번에 처리하고자 한다. 비슷한 일을 여러 번 반복하는 것은 비효율적이기 때문이다. 웹 개발자들은 새로운 웹사이트를 만들 때 비슷한 문제를 만난다는 걸 알게 됐고, 웹사이트에 필요한 기본적인 구성요소들을 빠르게 만들 수 있는 다양한 프레임워크를 만들었다. '장고(Django)'도 그 가운데 하나다.
+  
   프레임워크는 설계에 필요한 기본 틀과 각종 기능을 모아둔 것으로, 제작자 나름의 철학에 따라 만들어진 일종의 구조를 말한다. 장고는 파이썬 문법을 기반으로 웹 애플리케이션을 만드는 데 도움을 주는 프레임워크다. 웹 개발의 번거로움을 덜어주기 때문에 기능 구현에만 집중할 수 있게 돕는다.
 
 2. 장고의 특징
+
   빠르다 : 장고는 개발자가 가능한 한 빨리 콘셉트에서 애플리케이션 완성까지 갈 수 있도록 설계됐다.
+  
   충분한 기능 : 장고는 일반적인 웹 개발 작업을 처리하는 데 쓸 수 있는 수십 개의 추가 기능을 포함하고 있다. 장고는 사용자 인증, 콘텐츠 관리, 사이트 맵, RSS 피드 등의 작업을 처리할 수 있게 돕는다. 
-  신뢰성 : 장고는 SQL?인젝션, 크로스 사이트 스크립팅, 사이트 간 요청 위조 및 클릭재킹(clickjacking)과 같은 보안 문제를 피하는 데 도움이 된다. 사용자 인증 시스템으로 사용자 계정과 암호를 안전하게 관리할 방법을 제공한다.?
-  확장성 : 세계에서 가장 활발하게 사용되는 사이트 중 몇몇은 무거운 트래픽을 감당하기 위해 장고의 빠르고 유연한 확장성을 활용한다. ?
+  
+  신뢰성 : 장고는 SQL?인젝션, 크로스 사이트 스크립팅, 사이트 간 요청 위조 및 클릭재킹(clickjacking)과 같은 보안 문제를 피하는 데 도움이 된다. 사용자 인증 시스템으로 사용자 계정과 암호를 안전하게 관리할 방법을 제공한다.
+  
+  확장성 : 세계에서 가장 활발하게 사용되는 사이트 중 몇몇은 무거운 트래픽을 감당하기 위해 장고의 빠르고 유연한 확장성을 활용한다. 
+  
   다양한 용도 : 다양한 분야에서 장고를 사용해 콘텐츠 관리 시스템(CMS)부터 소셜 네트워크 서비스, 과학 컴퓨팅 플랫폼까지 구축해서 사용한다.
 
 3. 장고의 프로그래밍 언어
+
  1) 파이썬
+ 
   C언어를 기반으로 한 오픈소스 고급 프로그래밍 언어로, 1991년 귀도 반 로섬(Guido van Rossum)에 의해 설계 및 개발되었다. 파이썬이라는 이름은 파이썬을 설계한 귀도 반 로섬이 좋아하는 코미디 프로그램 “Monty Python's Flying Circus”에서 따온 것이라고 한다.
 파이썬은 1990년에 공개된 언어다. 네덜란드 개발자 귀도 반 로섬이 개발했다. 파이썬은 C, C++, Lisp, 스몰토크 등의 언어의 영향을 받았으며 이후 구글, 야후, 미국항공우주국(NASA) 등 글로벌 기업부터 스타트업까지 많이 활용되는 언어로 자리잡았다.
+
   특징
+  
  최근 몇 년 사이 파이썬의 인기는 점점 높아졌다. 간결한 문법 때문에 입문자들이 쉽게 배울 수 있는 덕분이다. 유지보수와 관리가 편한 장점도 파이썬 보급에 한몫했다. 또한 생산성이 높은 특징 때문에 빨리 서비스를 개발해야 하는 스타트업도 많이 이용하고 있다.
+ 
   재단과 커뮤니티
+  
  파이썬은 귀도 반 로섬이 최종 결정 권한을 갖고 기술을 개선하고 있다. 하지만 별도의 비영리재단인 파이썬 소프트웨어 재단을 두고 법, 행정, 금전적인 지원을 제공한다. 커뮤니티는 개방적이며, 재단 차원에서 다양한 사람들이 어울릴 수 있는 이벤트나 문화를 장려한다.
+ 
   이름의 유래
+  
  파이썬이라는 이름은 귀도가 즐겨보던 6인조 코미디 그룹 몬티 파이썬에서 따왔다.
  그래서 파이썬 공식 깃허브(GitHub) 저장소의 협업보조용 봇 이름들이 'Monty Python'의 배역들 이름이라고 한다.
+ 
 + 귀도 반 로섬
+
   귀도 반 로섬(영어: Guido van Rossum, 1956년 1월 31일 ~)은 네덜란드 출신의 컴퓨터 프로그래머이다. 프로그래밍 언어인 파이썬을 개발한 것으로 유명하다. 2005년부터 2012년까지 구글에서 일했으며, 2013년부터 드롭박스에서 일하고 있다.
+  
 반 로섬은 네덜란드에서 태어나서 자랐으며 1982년 암스테르담 대학에서 수학과 컴퓨터 공학 석사 학위를 받았다. 네덜란드 암스테르담의 Wiskunde & Informatica (네덜란드 Centrum Wiskunde & Informatica) 미국 국립 표준 기술 연구소 (NIST), 메릴랜드 주 게이 더스 버그, 버지니아 주 레스톤 (Reston)에있는 CNRI (National Research Initiatives)에서 근무하기도 하였다.
+
   귀도 반 로섬은 서체 디자이너이자 프로그래머 인 Just van Rossum의 형제이다. Just van Rossum은 "Python Powered"로고에 사용된 서체를 디자인했다. Guido는 그의 아내 Kim Knapp와 그의 아들 Orlijn과 함께 캘리포니아 주 벨몬트 (Belmont)에 거주한다.
+  
 귀도 반 로썸(Guido van Rossom)은 1989년 크리스마스 주에 연구실이 닫혀있어 심심한 김에 파이썬을 만들었다고 한다. 리누스나 귀도 둘다 심심한 김에 걸작을 만들었다는데 있어서, 위대한 공돌이의 피가 흐르는 것 같다. 
+
 + 구글
+
   구글은 '페이지 랭크'라는 독자적인 검색 알고리즘을 개발해 검색 시장을 장악하고 성장한 세계 최대 인터넷 검색 서비스 회사다. 구글은 전 세계 60개국 이상에 지사를 두고, 130개가 넘는 언어로 검색 인터페이스를 제공하고 있다.
+  
   이름의 유래
+  
  구글이란 이름은 10의 100 제곱을 뜻하는 수학 용어 구골(googol)에서 유래했다.
+ 
  1996년 스탠포드대학 박사과정에 재학 중이던 래리 페이지(Larry Page), 세르게이 브린(Sergey Brin)은 '페이지랭크'라는 검색 기술을 개발했다. 웹사이트의 중요도를 그 사이트로 연결되는 백링크를 따져 결정되도록 한 이 기술이 구글의 시초이다. 이들은 이 기술을 기반으로 1998년 공동으로 구글을 설립했다.
+ 
  2000년 4월 만우절에 찾고 싶은 키워드를 생각만 해도 알아서 검색해준다는 구글 멘탈플렉스(Google MentalPlex)를 발표하고, 6월에는 세계 최대의 검색엔진으로 올라섰다. 같은 해 9월 한국어, 일본어, 중국어 등의 검색 서비스를 제공하기 시작했으며, 10월부터는 검색 키워드 광고 판매를 시작했다. 당시 애드워즈 프로그램을 통해서 제공하는 광고 수입은 구글 전체 수입의 99%를 차지했다. 같은 해 12월 구글 툴바를 출시했다.
+ 
  이듬해인 2001년 3월 에릭 슈미트가 이사회 의장으로 임명되고, 8월에는 CEO로 취임했다. 2002년 9월 구글 뉴스 서비스를 시작했다. 2003년 최초의 블로그 서비스업체 파이라 랩스(Pyra Labs)를 인수했다. 2004년 4월 만우절에 지메일을 출시했고, 8월 19일 나스닥에 상장되어 주당 85달러로 출발했다. 당시 기업공개(IPO) 방식은 주간사를 통한 공모가 아니라 인터넷 경매 방식으로 주식을 배정하고 상장가를 결정하는 혁신적인 방법이었다.
+ 
 2004년 10월 디지털 지도 회사인 키홀(Keyhole)을 인수하고, 2005년 구글맵과 세계 최초의 위성영상지도 서비스인 구글어스(Google Earth)를 출시했고, 소프트웨어 업체 안드로이드를 5천만 달러에 인수했다. 2006년 8월 구글 도서검색에서 저작권이 만료된 도서의 무료 PDF 다운로드 서비스를 제공하기 시작했다. 10월에는 문맹 퇴치 프로젝트를 시작하고, 온라인 동영상 공유 사이트인 유튜브를 16억 5천만 달러에 인수했다.
+
  2007년 1월 차이나 모바일과 파트너 관계를 맺고 검색서비스를 제공하기 시작했으며, 5월 구글 지도에서 미국 5대 도시의 스트리트 뷰를 선보였다. 2007년 11월 최초의 휴대기기용 개방형 운영체제인 안드로이드 플랫폼을 발표했다. 2008년 3월 웹 출판과 광고 에이전시를 가진 더블클릭을 인수하고, 9월에는 오픈 소스 브라우저인 크롬을 출시했다. 2010년 1월 안드로이드 탑재폰인 넥서스원을 출시했다.
+ 
  한편 구글 최고의 브레인 집합체라 불리는 비밀연구조직 ‘구글X’가 세워져 비밀에 부쳐졌지만 구글 이사회는 구글X에 대한 투자를 승인했다. 같은 해 3월 새로운 온라인 상점인 구글 앱스 마켓플레이스를 개설했고, 5월에는 안드로이드 및 크롬 기반의 구글 TV를 발표했다. 10월에는 운전자 개입 없이 인공지능의 기술로 자동운행되는 무인자동차 실험에 성공했다.
+ 
 2011년 2월 전 세계 17개 유명 박물관을 인터넷으로 둘러보고, 1천여 점 이상의 미술품을 고해상도 이미지로 탐색할 수 있는 구글 아트 프로젝트를 발표했다. 같은 해 5월 휴대전화기를 이용한 구글 지갑 서비스를 선보였다. 10월에는 안드로이드 4.0버전을 탑재한 휴대전화인 갤럭시 넥서스를 삼성전자와 함께 제작해 발표했다. 2012년 5월 모토롤라 모빌리티를 인수했고, 구글의 무인자동차가 미국 네바다 주 교통부로부터 면허를 획득했다.
+
  2012년 9월 구글 최초의 태블릿 PC ‘넥서스 7’이 출시되었다. 2013년 5월 구글의 비밀연구소 ‘구글X’는 구글 글라스(안경)’를 공식 발표, 시연해보임으로써 웨어러블 기기(입는 컴퓨터)의 시대를 열었다. 구글 글라스는 사진촬영과 음성인식을 통한 인터넷 검색도 가능하다.
+ 
 이 외에도 구글X가 개발·추진해온 혁신적인 프로젝트는 일반 가정을 자동화하는 안드로이드 앳홈(Android@Home), 우주 엘리베이터, 스마트 워치, 삼킬 수 있는 진단용 알약, 전 세계 오지를 인터넷으로 연결하는 ‘무선 인터넷 프로젝트’, 안드로이드 기반 비디오 게임기, 차세대 구글 스마트폰, 재생에너지 사업 등이다. 2013년 6월 열기구를 이용해 인터넷망을 구축하는 프로젝트 룬(Project Loon)를 발표했다. 이어 7월에는 무선 스티리밍 기기인 크롬캐스트(Chromecast)를 출시했다. 2014년 6월 스마트워치 전용 플랫폼인 ‘안드로이드웨어’를 내놓았다.
+
 + 드롭박스사
+
  드류 휴스턴은 자신의 USB 플래시 드라이브를 자주 잊고 오는 실수와 기존의 인터넷 파일 공유 서비스의 불편함에 실망해 자신만의 서비스를 만들기 시작했다. 2007년 휴스턴은 드롭박스사(Dropbox, Inc.)를 설립했다.
+ 
 + 드롭박스
+
  매사추세츠 공과대학(MIT) 졸업생이었던 드류 휴스턴(Drew Houston)과 아라시 페르도시(Arachi Ferdowsi)에 의해 2007년 만들어진 서비스로, 2008년 테크크런치50 컨퍼런스에서 처음으로 공식 버전을 소개하였다. 같은 해 9월 정식 서비스를 시작하여 2015년 안정화 버전 3.6.8까지 출시되었다. 한국어를 포함한 16개 언어를 지원하고 있으며, 윈도우즈, MacOS X, 리눅스, iOS, 안드로이드, 윈도우즈 모바일, 블랙베리 등의 플랫폼을 지원한다.
+ 
  미국의 드롭박스(Dropbox Inc.) 사가 제공하는 웹 기반 파일 공유 서비스로, 온라인 저장공간인 클라우드 스토리지(cloud storage)와 로컬에 있는 여러 대의 컴퓨터 사이에서 데이터의 공유 및 동기화가 가능하도록 지원한다. 
+ 
 + 드류 휴스턴
+
  Andrew W. Houston은 미국의 인터넷 억만장자 기업가이며 온라인 백업 및 스토리지 서비스인 Dropbox의 공동 설립자이자 CEO이다. 포브스에 따르면 그의 순자산은 약 30억 달러이다.
  휴스턴은 1983년 메사추세츠 주 액튼에서 태어났다. 그는 1990년대에 액톤 박스버러 지역 고등학교에 다녔다. 그는 후에 매사추세츠 공과대학에서 컴퓨터 과학 학위를 받고 졸업했는데, 그곳에서 그는 피 델타 테타 협회 회원이었다. 나중에 Dropbox의 공동 설립자이자 CTO인 Arash Ferdowsi를 만난 곳은 바로 그 곳이었다.
 
 4. 장고는 누가 만들었을까?
+
   장고는 2003년과 2004년에 로렌스 저널 월드라는 신문사의 인턴 웹 프로그래머였던 에이드리안 홀로바티와 사이먼 윌리슨이 파이썬을 이용해 애플리케이션을 만들기 시작하면서 처음 개발되었다. 현재는 장고 소프트웨어 재단에 의해 관리되고 있다. 
+  
   장고 소프트웨어 재단
+  
  장고 소프트웨어 재단(Django Software Foundation) 은 파이썬으로 쓰여진 웹 프레임워크인 장고의 오픈 소스 개발을 지원하기 위해 설립된 비영리 단체이다. 2018년 1월 기준 25개의 법인 회원과 개인 회원의 후원으로 운영이 되고 있으며, 대표적인 법인 회원으로는 인스타그램과 제트브레인즈가 있다. 
 장고 관련 커뮤니티의 운영을 지원하고, 매년 장고에 기여한 봉사자들을 선정해 수상을 하기도 한다. 
+
 + 인스타그램
+
   인스타그램(Instagram, 다른 이름: IG)은 온라인 사진 공유 및 소셜 네트워킹 서비스이다. 사용자들은 인스타그램을 통해 사진 촬영과 동시에 다양한 디지털 필터(효과)를 적용하며 페이스북이나 트위터등 다양한 소셜 네트워킹 서비스에 사진을 공유할 수 있다.
+  
   인스타그램의 가장 큰 특징은 정사각형의 사진이며 보통의 모바일 기기에서 사용하는 16:9 비율과 다르다. 
+  
   인스타그램은 즉석에서 사진을 볼 수 있게 한 방식의 카메라인 ‘인스턴트(instant)’와 전보를 보낸다는 의미의 ‘텔레그램(telegram)’을 합쳐 만든 이름으로, 사진을 손쉽게 다른 사람들에게 전송한다는 뜻을 가지고 있다. 
+  
   2012년 기준 인스타그램 이용자 수는 8,000만 명을 돌파했고 2014년 12월 11일을 기준으로 세계 월간 활동 사용자(MAU)가 3억 명을 돌파했다.
+  
   인스타그램은 케빈 시스트롬과 마이크 크리거가 만들었으며 2010년 10월에 런칭했다. 
+  
   2016년 6월 21일 사용자가 5억 명을 돌파했다. 이용자 중 3억 명은 하루에 한 차례 이상 사용하며 매일 평균 9,500만 개의 사진과 영상이 올라온다. 인스타그램 사용자의 80% 이상이 미국 이외의 지역이며 인스타그램에 올라오는 사진과 영상은 하루 평균 9,500만 개로, 모회사인 페이스북의 성장 동력으로 각광 받고 있다. 
+  
   인스타그램은 2013년 11월부터 일부 기업을 통한 광고를 시범적으로 도입하여 운영하고 있다. 2013년 6월 동영상 서비스를, 12월에는 메시지 서비스도 내놓으며 SNS로서의 기능 또한 확장해 가고 있다. 국내에서도 인스타그램 사용자가 가파르게 늘고 있다. 인스타그램을 홍보하는 국내 대행사 관계자는 “국내에서 인스타그램 사용자가 활발하게 늘어나고 있다”면서 “특히 아이돌과 연예인들을 중심으로 인기를 끌고 있다”고 말했다. 인스타그램은 페이스북 한국 지사를 통해 국내 마케팅에도 시동을 걸고 있다. 해외에선 리바이스, 버버리와 같은 외국 기업들과 광고 파트너십을 맺은 바 있는데 국내에서도 기업들과 연계하여 다양한 수익 모델을 도입할 예정이다. 인스타그램에 광고 모델이 적용되면서 페이스북의 수익도 개선될 것으로 전망된다. 월스트리트저널(WSJ)에 따르면 페이스북의 2013년 회계연도 매출이 전년 대비 40% 증가했을 것으로 예상되고 있다. 매출 중 3분의 1을 모바일 광고에서 벌어들인 것으로 추정된다.
+  
 + 케빈 시스트롬
+
  Kevin York Systrom(1983년 12월 30일생)은 마이크 크리거와 함께 인스타그램 공동창립자로 가장 잘 알려진 미국의 기업가 겸 프로그래머다.
+ 
 + 마이크 크리거
+
  마이클 크라이거(1986년 3월 4일생)는 케빈 시스트롬과 함께 인스타그램을 공동 설립한 브라질 기업가 겸 소프트웨어 엔지니어다. 2018년 9월 24일, 크라이거가 인스타그램에서 물러났고 몇 주 후에 떠날 것이라고 발표되었다.
 
 5. 장고의 역사
+
   장고는 2003년과 2004년에 로렌스 저널 월드(Lawrence Journal World)라는 신문사의 인턴 웹 프로그래머였던 에이드리안 홀로바티(Adrian Holovaty)와 사이먼 윌리슨(Simon Willison)이 파이썬을 이용해 애플리케이션을 만들기 시작하면서 처음 개발되었다. 당시 로렌스 저널 월드의 웹사이트는 PHP 기반으로 쓰여졌었는데, 홀로바티와 윌리슨은 PHP는 규모가 큰 웹사이트에 적합하지 않다고 생각했고 이를 계기로 파이썬으로 웹 개발을 하기로 결심했다. 하지만 규모가 큰 웹 개발에 적합한 파이썬 도구가 없다는 것을 깨닫고 그들은 장고를 개발하게 되었다. 장고라는 이름은 홀로바티가 좋아하던 집시 재즈 기타리스트인 장고 라인하르트에서 따온 것이다. 
+  
   사실 장고는 오직 로렌스 웹사이트를 구동하기 위함이었으나, 홀로바티와 윌리슨이 로렌스의 소유자인 더 월드 컴퍼니(The World Company)를 설득하여 오픈 소스로 2005년 7월에 BSD 사용 허가서로 공개하게 되었다. 
+  
   2008년 6월, 장고 소프트웨어 재단이 공식적으로 장고 프로젝트를 관리하게 된다는 공지가 장고 웹사이트에 올라왔다. 
   2017년 12월에 장고 2.0 버전이 출시되었다.
+  
  
 6. 장고의 원리
- 웹사이트?주소를 적고?'엔터' 키를 누른다는 말은 "이 사이트의 내용을 나에게 가져다주세요"라는 의미와 같다. 편지를 보내고 받는 것과 근본적으로 같다. '웹사이트의 내용을 가져다 달라'는 요청을 받는 쪽은 '서버'다. 요청을 받고 서버에서 가지고 있는 내용을 보내준다. 
-웹 서버에 요청이 오면 장고로 전달된다. 장고?웹주소(URL) 확인자는 웹페이지?주소를 가져와 무엇을 해야 할지 확인하고, 패턴 목록을 가져와 URL과 맞는지 하나씩 대조해 식별한다. 일치하면 해당 요청을 관련한 뷰(view)에 넘겨준다. 뷰는 사용자?요청을 처리하고, 결과를 반환하기 위한 로직을 담고 있다.
+
+ 웹사이트 주소를 적고 '엔터' 키를 누른다는 말은 "이 사이트의 내용을 나에게 가져다주세요"라는 의미와 같다. 편지를 보내고 받는 것과 근본적으로 같다. '웹사이트의 내용을 가져다 달라'는 요청을 받는 쪽은 '서버'다. 요청을 받고 서버에서 가지고 있는 내용을 보내준다. 
+웹 서버에 요청이 오면 장고로 전달된다. 장고 웹주소(URL) 확인자는 웹페이지주소를 가져와 무엇을 해야 할지 확인하고, 패턴 목록을 가져와 URL과 맞는지 하나씩 대조해 식별한다. 일치하면 해당 요청을 관련한 뷰(view)에 넘겨준다. 뷰는 사용자 요청을 처리하고, 결과를 반환하기 위한 로직을 담고 있다.
  뷰는 애플리케이션의 로직을 넣는 곳이다. 모델에서 필요한 정보를 받아와 템플릿에 전달하는 역할을 한다. 장고의 모델은 객체의 특별한 종류다. 모델을 저장하면 데이터베이스에 저장된다. 예컨대 블로그 사이트를 만든다고 하면 '포스트' 모델을 구성해서 사용하는 식이다. 템플릿 안에 있는 값이 출력되면 비로소 우리가 볼 수 있는 형태가 된다.
+ 
 
 Database   My SQL
 1. My SQL란?
+
   마이에스큐엘 혹은 마이시퀄이라 발음하며, 2016년 기준 80% 이상의 시장 점유율을 차지하고 있는 관계형 데이터베이스 관리 시스템(RDBMS)이다. 오픈소스로 개발되며, GNU GPL(GNU General Public License)과 상업용 라이센스의 이중 라이센스로 관리되고 있다.
   1995년 5월 스웨덴의 MySQL AB사에 의해 최초의 MySQL 버전이 출시되었으며, 1998년 윈도우즈용 첫 버전이 출시되었다. 2008년 썬마이크로시스템즈(Sun Microsystems)가 MySQL를 인수한 후 버전 5.1을 출시하였으며, 2010년 6월 오라클이 썬마이크로시스템즈를 통합 인수한 후, 같은 해 12월 버전 5.5를 출시하였다. 2015년 10월 버전 5.7이 출시되었다.
   MySQL은 데이터를 저장 및 액세스하는 스토리지 엔진(storage engine)과 SQL 파서(SQL parser)를 따로 분리하여 용도에 따라 스토리지 엔진을 선택할 수 있는 멀티 스토리지 엔진 방식을 채용하고 있다. 가장 많이 사용하는 두 가지 엔진은 마이아이삼(MyISAM)과 이노디비(InnoDB)로, 마이아이삼은 기능이 단순하고 데이터 조회를 위한 셀렉트 속도가 이노디비에 비해 빠르다. 하지만 데이터베이스 내에서 한 번에 수행되는 일련의 연산들에 대한 안전성을 보장하는 트랜잭션(transaction)이 지원되지 않기 때문에, 데이터 무결성을 보장해야 하는 경우 이노디비가 사용된다.
